attempt to fix issues with terminal sizing on mobile

--- a/docs/website/theme/resources/styles/playground/terminal.scss
+++ b/docs/website/theme/resources/styles/playground/terminal.scss
@@ -1,7 +1,6 @@
 #terminal {
     position: relative;
     padding: 1em;
-    padding-bottom: 2em;
     background: black;
     font-family: 'Fira Code Arturo', monospace !important;
     white-space: pre-wrap;
@@ -61,6 +60,7 @@
    overflow-y: auto;
    line-break: anywhere !important;
    scroll-behavior: smooth;
+   padding-bottom: 2.5em;
 
    ::-webkit-scrollbar {
         background: none;
@@ -101,7 +101,7 @@
 }
 
 #terminal-status {
-    position: absolute;
+    position: sticky;
     bottom: 0;
     left: 0;
     right: 0;
@@ -115,6 +115,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-shrink: 0;
     
     .status-error {
         color: #ff6b6b;
